--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="hero-inner" data-bg-src="assets/img/promo/bane2.png">
+                                <div class="hero-inner" data-bg-src="assets/img/promo/bane5.png">
                                     <div class="hero-style3">
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
@@ -294,7 +294,7 @@
                                 </div>
                             </div>
                             <div class="swiper-slide">
-                                <div class="hero-inner" data-bg-src="assets/img/promo/bane3.png">
+                                <div class="hero-inner" data-bg-src="assets/img/promo/bane6.png">
                                     <div class="hero-style3">
                                         <a href="profil.html" class="th-btn style4" data-ani="slideinup"
                                             data-ani-delay="0.6s">Belanja Sekarang<i
@@ -357,10 +357,10 @@
         </div>
     </section>
 
-    <section class="mt-4 space-extra-bottom" data-pos-for=" #category-sec" data-sec-pos="bottom-half">
+    <section class="mt-4">
         <div class="container z-index-common">
             <div class="row gy-4 justify-content-center">
-                <div class="col-xl-4 col-md-6">
+                <div class="col-xl-4 col-md-12">
                     <div class="offer-box mega-hover" data-bg-src="assets/img/promo/1.png">
                         <span class="box-subtitle">Termurah</span>
                         <h3 class="box-title">Aneka Buah <br> dan Sayur</h3>
@@ -368,7 +368,7 @@
                                 class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div class="col-xl-4 col-md-12">
                     <div class="offer-box mega-hover" data-bg-src="assets/img/promo/3.png">
                         <span class="box-subtitle bg-theme">Terlengkap</span>
                         <h3 class="box-title">Kebutuhan <br> Pokok</h3>
@@ -376,7 +376,7 @@
                                 class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
                 </div>
-                <div class="col-xl-4 col-md-6">
+                <div class="col-xl-4 col-md-12">
                     <div class="offer-box mega-hover" data-bg-src="assets/img/promo/2.png">
                         <span class="box-subtitle">Serba Ada</span>
                         <h3 class="box-title">Semua Serba <br> Ada disini </h3>
