--- a/produk.html
+++ b/produk.html
@@ -89,11 +89,39 @@
                             <a href="#" class="icon-btn"><i class="far fa-heart"></i></a>
                         </div>
                         <div class="product_meta">
-                            <span class="posted_in">Category: <a href="produk.html">Pasar Desa, Produk Lokal,
-                                </a></span>
-                            <span>Tags: <a href="produk.html">Produk Lokal</a><a href="produk.html">Produk
-                                    Desa</a></span>
+                            <table style="width: 100%; border-collapse: collapse; border: none">
+                                <tr>
+                                    <td style="vertical-align: top; width: 120px; ">
+                                        <strong>Desa</strong></td>
+
+                                    <td>
+                                        <a href="produk.html">
+                                            : Meranjat II
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="vertical-align: top; ">
+                                        <strong>Toko/Pedagang</strong></td>
+
+                                    <td>
+                                        <a href="produk.html">
+                                            : M. Fulan
+                                        </a>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td style="vertical-align: top; ">
+                                        <strong>Kategori</strong></td>
+
+                                    <td>
+                                        <a href="produk.html">: Produk Lokal</a>
+                                    </td>
+                                </tr>
+                            </table>
                         </div>
+
+
                     </div>
                 </div>
             </div>
