--- a/index.html
+++ b/index.html
@@ -251,11 +251,12 @@
                                         Pencarian Populer
                                     </h3>
                                     <div class="popular-tags" id="popularTags">
-                                        <button class="popular-tag" data-search="smartphone">Smartphone</button>
-                                        <button class="popular-tag" data-search="laptop gaming">Laptop Gaming</button>
-                                        <button class="popular-tag" data-search="fashion wanita">Fashion Wanita</button>
-                                        <button class="popular-tag" data-search="makanan sehat">Makanan Sehat</button>
-                                        <button class="popular-tag" data-search="skincare">Skincare</button>
+                                        <button class="popular-tag" data-search="buah buahan">Buah Segar</button>
+                                        <button class="popular-tag" data-search="sayuran segar">Sayuran Segar</button>
+                                        <button class="popular-tag" data-search="sembako">Sembako</button>
+                                        <button class="popular-tag" data-search="kerajinan lokal">Elpiji 3kg
+                                        </button>
+                                        <button class="popular-tag" data-search="gerabah">Sembako</button>
                                     </div>
                                 </div>
 
@@ -432,7 +433,7 @@
                 <div class="col-xl-4 col-md-12">
                     <div class="offer-box mega-hover" data-bg-src="assets/img/promo/1.png">
                         <span class="box-subtitle">Termurah</span>
-                        <h3 class="box-title">Aneka Buah <br> dan Sayur</h3>
+                        <h3 class="box-title">Aneka Sayuran <br> Segar</h3>
                         <a href="produk.html" class="th-btn btn-sm">Belanja Sekarang<i
                                 class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
@@ -448,7 +449,7 @@
                 <div class="col-xl-4 col-md-12">
                     <div class="offer-box mega-hover" data-bg-src="assets/img/promo/2.png">
                         <span class="box-subtitle">Serba Ada</span>
-                        <h3 class="box-title">Semua Serba <br> Ada disini </h3>
+                        <h3 class="box-title">Aneka <br> Buah Segar Lokal </h3>
                         <a href="produk.html" class="th-btn btn-sm">Belanja Sekarang<i
                                 class="fas fa-chevrons-right ms-2"></i></a>
                     </div>
